[gd_scene load_steps=7 format=3 uid="uid://dar27t4blibx5"]

[ext_resource type="PackedScene" uid="uid://bm6atc6gmel1k" path="res://addons/cosmostasia_editor/scenes/character_selector.tscn" id="1_dis0v"]
[ext_resource type="Script" path="res://addons/cosmostasia_editor/scripts/character_editor.gd" id="1_srq4s"]
[ext_resource type="PackedScene" uid="uid://dsn6kuvoiecn4" path="res://addons/cosmostasia_editor/scenes/data_fields/text_field.tscn" id="3_ihc8q"]
[ext_resource type="PackedScene" uid="uid://cfc44iurf687v" path="res://addons/cosmostasia_editor/scenes/data_fields/multiline_text_field.tscn" id="4_6ayta"]
[ext_resource type="PackedScene" uid="uid://dau0cu5ul08ok" path="res://addons/cosmostasia_editor/scenes/data_fields/int_field.tscn" id="4_suv13"]
[ext_resource type="PackedScene" uid="uid://pfkb4f236n2c" path="res://addons/cosmostasia_editor/scenes/data_fields/texture_field.tscn" id="6_2rlco"]

[node name="CharacterEditor" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_srq4s")

[node name="FileManagementPanel" type="ScrollContainer" parent="."]
custom_minimum_size = Vector2(0, 32)
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 8.0
grow_horizontal = 2

[node name="FileManagermentContainer" type="HBoxContainer" parent="FileManagementPanel"]
layout_mode = 2

[node name="CharacterSelector" parent="FileManagementPanel/FileManagermentContainer" instance=ExtResource("1_dis0v")]
unique_name_in_owner = true
layout_mode = 2

[node name="ResourceName" type="Label" parent="FileManagementPanel/FileManagermentContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(256, 0)
layout_mode = 2

[node name="SaveButton" type="Button" parent="FileManagementPanel/FileManagermentContainer"]
layout_mode = 2
auto_translate = false
text = "Save"

[node name="CreateButton" type="Button" parent="FileManagementPanel/FileManagermentContainer"]
layout_mode = 2
auto_translate = false
text = "Create New"

[node name="RefreshButton" type="Button" parent="FileManagementPanel/FileManagermentContainer"]
layout_mode = 2
auto_translate = false
text = "Reload"

[node name="EditPanel" type="ScrollContainer" parent="."]
visible = false
layout_mode = 2
offset_top = 48.0
offset_right = 240.0
offset_bottom = 648.0

[node name="EditContainer" type="VBoxContainer" parent="EditPanel"]
unique_name_in_owner = true
layout_mode = 2

[node name="NameField" parent="EditPanel/EditContainer" instance=ExtResource("3_ihc8q")]
layout_mode = 2
property_name = "character_name"

[node name="QuoteField" parent="EditPanel/EditContainer" instance=ExtResource("4_6ayta")]
layout_mode = 2
property_name = "character_quote"

[node name="TextureField" parent="EditPanel/EditContainer" instance=ExtResource("6_2rlco")]
layout_mode = 2
dir_path = "res://resources/sprites/character_sprites"
property_name = "character_texture"

[node name="HPField" parent="EditPanel/EditContainer" instance=ExtResource("4_suv13")]
layout_mode = 2
property_name = "max_health"

[node name="FileSelector" type="FileDialog" parent="."]
unique_name_in_owner = true
root_subfolder = "res://resources/game_data/character_data/"
filters = PackedStringArray("*.tres ; Resources")

[connection signal="character_selected" from="FileManagementPanel/FileManagermentContainer/CharacterSelector" to="." method="_on_character_selected"]
[connection signal="pressed" from="FileManagementPanel/FileManagermentContainer/SaveButton" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="FileManagementPanel/FileManagermentContainer/CreateButton" to="." method="_on_create_button_pressed"]
[connection signal="pressed" from="FileManagementPanel/FileManagermentContainer/RefreshButton" to="." method="_on_refresh_button_pressed"]
